Cross-browser issue with collapsable text fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -486,7 +486,3 @@ form.options {
 p.docref {
     padding-left: 10px;
 }
-
-div.more {
-    display: none;
-}
